typescript/checker/tests/conformance/expressions/conditonalOperator/conditionalOperatorConditoinIsAnyType.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            135,
        ),
        hi: BytePos(
            147,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/conditonalOperator/conditionalOperatorConditoinIsAnyType.ts:6:5
  |
6 | var exprBoolean1: boolean;
  |     ^^^^^^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            162,
        ),
        hi: BytePos(
            173,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/conditonalOperator/conditionalOperatorConditoinIsAnyType.ts:7:5
  |
7 | var exprNumber1: number;
  |     ^^^^^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            187,
        ),
        hi: BytePos(
            198,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/conditonalOperator/conditionalOperatorConditoinIsAnyType.ts:8:5
  |
8 | var exprString1: string;
  |     ^^^^^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            212,
        ),
        hi: BytePos(
            225,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/conditonalOperator/conditionalOperatorConditoinIsAnyType.ts:9:5
  |
9 | var exprIsObject1: Object;
  |     ^^^^^^^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            259,
        ),
        hi: BytePos(
            271,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/conditonalOperator/conditionalOperatorConditoinIsAnyType.ts:12:5
   |
12 | var exprBoolean2: boolean;
   |     ^^^^^^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            286,
        ),
        hi: BytePos(
            297,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/conditonalOperator/conditionalOperatorConditoinIsAnyType.ts:13:5
   |
13 | var exprNumber2: number;
   |     ^^^^^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            311,
        ),
        hi: BytePos(
            322,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/conditonalOperator/conditionalOperatorConditoinIsAnyType.ts:14:5
   |
14 | var exprString2: string;
   |     ^^^^^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            336,
        ),
        hi: BytePos(
            349,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/conditonalOperator/conditionalOperatorConditoinIsAnyType.ts:15:5
   |
15 | var exprIsObject2: Object;
   |     ^^^^^^^^^^^^^

error: unimplemented
expand_export_info(Object)
File: $DIR/tests/conformance/expressions/conditonalOperator/conditionalOperatorConditoinIsAnyType.ts
  --> $DIR/tests/conformance/expressions/conditonalOperator/conditionalOperatorConditoinIsAnyType.ts:46:23
   |
46 | var resultIsObject1 = condAny ? exprIsObject1 : exprIsObject2;
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unimplemented
expand_export_info(Object)
File: $DIR/tests/conformance/expressions/conditonalOperator/conditionalOperatorConditoinIsAnyType.ts
  --> $DIR/tests/conformance/expressions/conditonalOperator/conditionalOperatorConditoinIsAnyType.ts:53:23
   |
53 | var resultIsObject2 = [null, undefined] ? exprIsObject1 : exprIsObject2;
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unimplemented
expand_export_info(Object)
File: $DIR/tests/conformance/expressions/conditonalOperator/conditionalOperatorConditoinIsAnyType.ts
  --> $DIR/tests/conformance/expressions/conditonalOperator/conditionalOperatorConditoinIsAnyType.ts:62:23
   |
62 | var resultIsObject3 = x.doSomeThing() ? exprIsObject1 : exprIsObject2;
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

